Fix formatting to prettier style
Refer to If9aae2087c3299ae5d54728cd17d86c2b0dcb8a0 for details
on the implementation.

Signed-off-by: Thanh Ha <zxiiro@gmail.com>
Change-Id: If845d7ecf8ee229bdd2407038cfe6bb0e2a9194f

--- a/.jjb-test/lf-ci-jobs.yaml
+++ b/.jjb-test/lf-ci-jobs.yaml
@@ -14,7 +14,6 @@
 
     project-name: github-ciman
 
-
 - project:
     name: gerrit-openstack-jobs
     jobs:
@@ -23,8 +22,8 @@
     project-name: gerrit-ciman
 
     jenkins-urls: >
-        https://jenkins.example.org
-        https://jenkins.example.org/sandbox
+      https://jenkins.example.org
+      https://jenkins.example.org/sandbox
 
 - project:
     name: github-openstack-jobs
@@ -34,9 +33,8 @@
     project-name: github-ciman
 
     jenkins-urls: >
-        https://jenkins.example.org
-        https://jenkins.example.org/sandbox
-
+      https://jenkins.example.org
+      https://jenkins.example.org/sandbox
 
 - project:
     name: gerrit-packer-jobs
@@ -75,11 +73,11 @@
 
     throttle-enabled: true
     throttle_categories:
-      - 'cat1'
-      - 'cat2'
+      - "cat1"
+      - "cat2"
     throttle-max-per-node: 3
     throttle-max-total: 2
-    throttle-option: 'category'
+    throttle-option: "category"
 
     project-name: throttle-ciman
 
