--- a/.jjb-test/lf-ci-jobs/jenkins-cfg-merge-full.yaml
+++ b/.jjb-test/lf-ci-jobs/jenkins-cfg-merge-full.yaml
@@ -2,7 +2,7 @@
 - project:
     name: jenkins-cfg-merge-full-test
     jobs:
-      - 'gerrit-jenkins-cfg-merge'
+      - "gerrit-jenkins-cfg-merge"
 
     project-name: builder
     jenkins-silos: releng sandbox
