--- a/.jjb-test/lf-openstack/lf-stack-delete-minimal.yaml
+++ b/.jjb-test/lf-openstack/lf-stack-delete-minimal.yaml
@@ -14,4 +14,4 @@
 
     publishers:
       - lf-stack-delete:
-          openstack-cloud: '{openstack-cloud}'
+          openstack-cloud: "{openstack-cloud}"
