--- a/.jjb-test/defaults.yaml
+++ b/.jjb-test/defaults.yaml
@@ -10,7 +10,7 @@
 
     # GitHub Infra
     git-url: https://github.com
-    git-clone-url: 'git@github.com:'
+    git-clone-url: "git@github.com:"
     github-org: example-org
     github_pr_whitelist:
       - jpwku
