--- a/.jjb-test/lf-ci-jobs/openstack-cron-full.yaml
+++ b/.jjb-test/lf-ci-jobs/openstack-cron-full.yaml
@@ -2,13 +2,13 @@
 - project:
     name: openstack-cron-full-test
     jobs:
-      - 'gerrit-openstack-cron'
+      - "gerrit-openstack-cron"
 
     project-name: ciman-full
 
     jenkins-urls: >
-        https://jenkins.example.org
-        https://jenkins.example.org/sandbox
+      https://jenkins.example.org
+      https://jenkins.example.org/sandbox
     openstack-cloud: example-cloud
     openstack-image-cleanup: false
     openstack-image-cleanup-age: 42
