--- a/.jjb-test/lf-ci-jobs/openstack-cron-minimal.yaml
+++ b/.jjb-test/lf-ci-jobs/openstack-cron-minimal.yaml
@@ -2,10 +2,10 @@
 - project:
     name: openstack-cron-minimal-test
     jobs:
-      - 'gerrit-openstack-cron'
+      - "gerrit-openstack-cron"
 
     project-name: ci-management
 
     jenkins-urls: >
-        https://jenkins.example.org
-        https://jenkins.example.org/sandbox
+      https://jenkins.example.org
+      https://jenkins.example.org/sandbox
