--- a/.jjb-test/lf-docker-jobs/docker-jobs.yaml
+++ b/.jjb-test/lf-docker-jobs/docker-jobs.yaml
@@ -1,16 +1,16 @@
 ---
 - project:
-    name: '{project-name}-docker'
+    name: "{project-name}-docker"
     jobs:
-      - '{project-name}-gerrit-docker-jobs'
+      - "{project-name}-gerrit-docker-jobs"
 
     project: docker/project
     project-name: docker-project
     container-public-registry: pub-registry
     container-push-registry: push-registry
     container-tag-method: yaml-file
-    container-tag-yaml-dir: ''
-    docker-build-args: ''
+    container-tag-yaml-dir: ""
+    docker-build-args: ""
     docker-name: docker-image-name
     docker-root: docker
     branch: master
