--- a/.jjb-test/lf-whitesource-jobs.yaml
+++ b/.jjb-test/lf-whitesource-jobs.yaml
@@ -3,9 +3,9 @@
     name: whitesource-scan-project-jobs
     jobs:
       - gerrit-whitesource-scan
-    branch: 'master'
+    branch: "master"
     mvn-clean-install: true
-    mvn-settings: 'whitesource-scan-project-settings'
-    project: 'whitesource/scan-project-jobs'
-    project-name: 'whitesource-scan-project'
+    mvn-settings: "whitesource-scan-project-settings"
+    project: "whitesource/scan-project-jobs"
+    project-name: "whitesource-scan-project"
     wss-product-name: EXAMPLE-ORG
