--- a/jjb/lf-info-vote.yaml
+++ b/jjb/lf-info-vote.yaml
@@ -8,14 +8,14 @@
 
     gerrit_trigger_file_paths:
       - compare-type: REG_EXP
-        pattern: 'INFO.yaml'
+        pattern: "INFO.yaml"
 
     #####################
     # Job Configuration #
     #####################
 
     project-type: freestyle
-    node: '{build-node}'
+    node: "{build-node}"
 
     properties:
       - lf-infra-properties:
@@ -24,18 +24,17 @@
     parameters:
       - lf-infra-parameters:
           project: $GERRIT_PROJECT
-          branch: 'master'
-          refspec: 'refs/heads/{branch}'
-          stream: 'master'
+          branch: "master"
+          refspec: "refs/heads/{branch}"
+          stream: "master"
 
     wrappers:
       - lf-infra-wrappers:
-          build-timeout: '{build-timeout}'
-          jenkins-ssh-credential: '{jenkins-ssh-credential}'
+          build-timeout: "{build-timeout}"
+          jenkins-ssh-credential: "{jenkins-ssh-credential}"
 
     publishers:
       - lf-infra-publish
-
 
 - lf_info_vote_verify: &lf_info_vote_verify
     name: lf-info-vote-verify
@@ -45,7 +44,7 @@
     build-days-to-keep: 7
     build-timeout: 15
     disable-job: false
-    git-url: '$GIT_URL/$PROJECT'
+    git-url: "$GIT_URL/$PROJECT"
     submodule-timeout: 10
     submodule-disable: false
     submodule-recursive: true
@@ -55,21 +54,21 @@
       - comment-added-contains-event:
           comment-contains-value: '^Patch Set\s+\d+:\s+vote\s*$'
       - comment-added-event:
-          approval-category: 'Code-Review'
+          approval-category: "Code-Review"
           approval-value: 2
 
     #####################
     # Job Configuration #
     #####################
 
-    disabled: '{disable-job}'
+    disabled: "{disable-job}"
 
     builders:
       - check-info-votes:
-          jenkins-ssh-credential: '{jenkins-ssh-credential}'
+          jenkins-ssh-credential: "{jenkins-ssh-credential}"
 
 - job-template:
-    name: 'info-vote'
+    name: "info-vote"
     id: info-vote-verify
     <<: *lf_info_vote_common
     # yamllint disable-line rule:key-duplicates
@@ -77,28 +76,28 @@
 
     scm:
       - lf-infra-gerrit-scm:
-          branch: '$GERRIT_BRANCH'
-          jenkins-ssh-credential: '{jenkins-ssh-credential}'
-          git-url: '{git-url}'
-          refspec: '$GERRIT_REFSPEC'
-          submodule-recursive: '{submodule-recursive}'
-          submodule-timeout: '{submodule-timeout}'
-          submodule-disable: '{submodule-disable}'
+          branch: "$GERRIT_BRANCH"
+          jenkins-ssh-credential: "{jenkins-ssh-credential}"
+          git-url: "{git-url}"
+          refspec: "$GERRIT_REFSPEC"
+          submodule-recursive: "{submodule-recursive}"
+          submodule-timeout: "{submodule-timeout}"
+          submodule-disable: "{submodule-disable}"
           choosing-strategy: gerrit
 
     triggers:
       - gerrit:
-          server-name: '{gerrit-server-name}'
-          trigger-on: '{obj:gerrit_verify_triggers}'
+          server-name: "{gerrit-server-name}"
+          trigger-on: "{obj:gerrit_verify_triggers}"
           projects:
-            - project-compare-type: 'ANT'
-              project-pattern: '**'
+            - project-compare-type: "ANT"
+              project-pattern: "**"
               branches:
-                - branch-compare-type: 'ANT'
-                  branch-pattern: '**/master'
-              file-paths: '{obj:gerrit_trigger_file_paths}'
+                - branch-compare-type: "ANT"
+                  branch-pattern: "**/master"
+              file-paths: "{obj:gerrit_trigger_file_paths}"
           skip-vote:
-            successful: '{gerrit-skip-vote}'
-            failed: '{gerrit-skip-vote}'
-            unstable: '{gerrit-skip-vote}'
-            notbuilt: '{gerrit-skip-vote}'
+            successful: "{gerrit-skip-vote}"
+            failed: "{gerrit-skip-vote}"
+            unstable: "{gerrit-skip-vote}"
+            notbuilt: "{gerrit-skip-vote}"
