--- a/jjb/lf-maven-job-groups.yaml
+++ b/jjb/lf-maven-job-groups.yaml
@@ -1,6 +1,6 @@
 ---
 - job-group:
-    name: '{project-name}-maven-jobs'
+    name: "{project-name}-maven-jobs"
 
     # This job group contains all the recommended jobs that should be deployed
     # for any project ci.
@@ -13,7 +13,7 @@
       - gerrit-maven-verify-dependencies
 
 - job-group:
-    name: '{project-name}-github-maven-jobs'
+    name: "{project-name}-github-maven-jobs"
 
     # This job group contains all the recommended jobs that should be deployed
     # for any project ci that is using github.
@@ -25,7 +25,7 @@
       - github-maven-verify
 
 - job-group:
-    name: '{project-name}-maven-javadoc-jobs'
+    name: "{project-name}-maven-javadoc-jobs"
 
     # This job group contains all the recommended jobs that should be deployed
     # for any project ci.
@@ -35,7 +35,7 @@
       - gerrit-maven-javadoc-verify
 
 - job-group:
-    name: '{project-name}-github-maven-javadoc-jobs'
+    name: "{project-name}-github-maven-javadoc-jobs"
 
     # This job group contains all the recommended jobs that should be deployed
     # for any project ci.
