--- a/jjb/lf-python-job-groups.yaml
+++ b/jjb/lf-python-job-groups.yaml
@@ -1,6 +1,6 @@
 ---
 - job-group:
-    name: '{project-name}-python-jobs'
+    name: "{project-name}-python-jobs"
 
     # This job group contains all the recommended jobs that should be deployed
     # for any project ci that is using Gerrit.
@@ -10,7 +10,7 @@
       - gerrit-tox-verify
 
 - job-group:
-    name: '{project-name}-github-python-jobs'
+    name: "{project-name}-github-python-jobs"
 
     # This job group contains all the recommended jobs that should be deployed
     # for any project ci that is using GitHub.
