--- a/jjb/lf-release-job-groups.yaml
+++ b/jjb/lf-release-job-groups.yaml
@@ -1,6 +1,6 @@
 ---
 - job-group:
-    name: '{project-name}-gerrit-release-jobs'
+    name: "{project-name}-gerrit-release-jobs"
 
     # This job group contains all the recommended jobs that should be deployed
     # for any project using self releases.
