--- a/jjb/lf-rtd-job-groups.yaml
+++ b/jjb/lf-rtd-job-groups.yaml
@@ -1,13 +1,13 @@
 ---
 - job-group:
-    name: '{project-name}-rtd-jobs'
+    name: "{project-name}-rtd-jobs"
 
     jobs:
       - gerrit-rtd-merge
       - gerrit-rtd-verify
 
 - job-group:
-    name: '{project-name}-github-rtd-jobs'
+    name: "{project-name}-github-rtd-jobs"
 
     jobs:
       - github-rtd-merge
